--- a/src/wagtailbakery/templates/wagtailbakery/admin.html
+++ b/src/wagtailbakery/templates/wagtailbakery/admin.html
@@ -1,10 +1,10 @@
 {% extends "wagtailadmin/base.html" %}
 {% load i18n %}
 
-{% block titletag %}{% trans "Static site build" %}{% endblock %}
+{% block titletag %}{% trans "Export site" %}{% endblock %}
 
 {% block content %}
-    {% include "wagtailadmin/shared/header.html" with title="Static site build" icon="site" %}
+    {% include "wagtailadmin/shared/header.html" with title="Export site" icon="site" %}
 
     <div class="nice-padding">
         <p>
